--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.12.2",
     "clsx": "^2.1.1",
     "eruda": "^3.0.1",
+    "framer-motion": "^12.23.24",
     "lucide-react": "^0.544.0",
     "next": "15.3.1",
     "next-intl": "^4.1.0",
