--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "test:coverage": "jest --coverage"
   },
   "dependencies": {
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.4.2",
     "@tanstack/react-query": "^5.89.0",
     "@telegram-apps/sdk-react": "^3.2.4",
     "@tonconnect/ui-react": "^2.1.0",
+    "@types/three": "^0.182.0",
     "axios": "^1.12.2",
     "clsx": "^2.1.1",
     "eruda": "^3.0.1",
@@ -26,7 +29,8 @@
     "normalize.css": "^8.0.1",
     "react": "^18",
     "react-dom": "^18",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "three": "^0.182.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.9.1",
