--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev:https": "next dev --experimental-https",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "eslint .",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage"
@@ -24,7 +24,7 @@
     "eruda": "^3.0.1",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.544.0",
-    "next": "15.3.1",
+    "next": "16.1.5",
     "next-intl": "^4.1.0",
     "normalize.css": "^8.0.1",
     "react": "^18",
@@ -42,7 +42,7 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.21",
     "eslint": "^8",
-    "eslint-config-next": "14.2.4",
+    "eslint-config-next": "16.1.5",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
     "jest": "^30.2.0",
